fixed exalton alignment

--- a/css/exalton.css
+++ b/css/exalton.css
@@ -1330,6 +1330,7 @@ z-index: 3;
 
 .hero-ex{
   flex-direction: column;
+  align-items: center;
   margin-top: 15vw;
 }
 
